kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: java-devops-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-devops-lab

  template:
    metadata:
      labels:
        app: java-devops-lab

    spec:
      containers:
        - name: java-devops-lab
          image: nagaanjaneuludale/java-devops-lab:e344e5e5fa4e40055062c90a6bd61cc53053cf60
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
