kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: java-devops-lab-service

spec:
  selector:
    app: java-devops-lab

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
