kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: java-devops-lab-ingress

spec:
  rules:
    - host: java-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-devops-lab-service
                port:
                  number: 80
